crates/alder-parse/src/item/snapshots/alder_parse__item__enum___tests__enum_trailing_comma.snap
---
source: crates/alder-parse/src/item/enum_.rs
description: "enum Color { Red, Green, }"
---
EnumDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 6,
            },
            end: Position {
                line: 1,
                column: 11,
            },
        },
        value: "Color",
    },
    params: [],
    variants: [
        Variant {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 14,
                    },
                    end: Position {
                        line: 1,
                        column: 17,
                    },
                },
                value: "Red",
            },
            payload: Unit,
        },
        Variant {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 19,
                    },
                    end: Position {
                        line: 1,
                        column: 24,
                    },
                },
                value: "Green",
            },
            payload: Unit,
        },
    ],
}
