crates/alder-parse/src/item/snapshots/alder_parse__item__enum___tests__enum_tuple_variant.snap
---
source: crates/alder-parse/src/item/enum_.rs
description: "enum Shape { Circle(Number) }"
---
EnumDecl {
    name: Located {
        region: Region {
            start: Position {
                line: 1,
                column: 6,
            },
            end: Position {
                line: 1,
                column: 11,
            },
        },
        value: "Shape",
    },
    params: [],
    variants: [
        Variant {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 14,
                    },
                    end: Position {
                        line: 1,
                        column: 20,
                    },
                },
                value: "Circle",
            },
            payload: Tuple(
                [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 21,
                            },
                            end: Position {
                                line: 1,
                                column: 27,
                            },
                        },
                        value: Named {
                            path: Path {
                                segments: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 21,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 27,
                                            },
                                        },
                                        value: "Number",
                                    },
                                ],
                            },
                            args: [],
                        },
                    },
                ],
            ),
        },
    ],
}
